Actualiza estilos CSS para mejorar la apariencia y la estructura del layout, incluyendo colores de fondo, ajustes en el diseño de elementos y mejoras en la responsividad.

--- a/01-Layout/02-layout-lab-extra/styles.css
+++ b/01-Layout/02-layout-lab-extra/styles.css
@@ -1,5 +1,8 @@
 :root {
-  --color_background: aquamarine;
+  --color_background: rgb(227, 226, 226);
+  --li_footer_bg_color: rgb(241, 249, 228);
+  --title_bg_color: rgb(189, 208, 81);
+  --nav_bg_color: rgb(72, 72, 3);
 }
 
 * {
@@ -13,12 +16,21 @@
 body {
   display: flex;
   flex-direction: column;
-  background-color: grey;
-  height: 100vh;
-}
 
-.toolbar,
+  height: 100vh;
+  min-width: 320px;
+}
+.page-title {
+  padding: 10px;
+  height: 60px;
+  color: white;
+  font-size: 30px;
+  align-content: center;
+
+  background-color: var(--title_bg_color);
+}
 input,
+.toolbar > div,
 .menu-title {
   display: none;
 }
@@ -27,16 +39,27 @@ ul {
   display: flex;
   justify-content: space-around;
   list-style-type: none;
-  background-color: rgb(241, 249, 228);
+
   margin: 0;
   padding: 0;
 }
 
 li {
+  margin: 5px;
   height: 40px;
-  align-content: center;
-  padding: 10px;
-  border: 1px solid grey;
+  width: 80px;
+  text-align: center;
+  padding: 10px; /*TODO : esta alineacion vertical con padding?*/
+  border: 1px solid;
+  background-color: var(--li_footer_bg_color);
+}
+
+nav {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  background-color: rgb(72, 72, 3);
 }
 
 main,
@@ -47,14 +70,17 @@ main,
   align-items: center;
 }
 
+main {
+  background-color: var(--color_background);
+}
+
 .list {
-  gap: 20px;
-  padding: 20px;
+  gap: 10px;
+  padding: 20px 0px;
   width: 100%;
 }
 
 .card.item {
-  border: 1px solid grey;
   border-radius: 2%;
   padding: 15px;
   width: 90%;
@@ -70,12 +96,15 @@ main,
 
 img {
   border-radius: 50%;
-  padding-bottom: 5px;
+  margin-bottom: 5px;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 footer {
   height: 40px;
-  background-color: rgb(241, 249, 228);
+  background-color: var(--li_footer_bg_color);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -92,14 +121,12 @@ footer {
   }
 
   body {
-    background-color: var(--color_background);
     min-height: 100dvh;
   }
 
   header {
     display: flex;
     flex-direction: column;
-    background-color: rgb(189, 208, 81);
   }
 
   .toolbar {
@@ -108,6 +135,10 @@ footer {
     background-color: rgb(255, 255, 255);
     padding: 10px;
   }
+  input,
+  .toolbar > div {
+    display: block;
+  }
 
   .page-title {
     padding: 10px;
@@ -115,24 +146,27 @@ footer {
     color: white;
     font-size: 30px;
     align-content: center;
-    margin-left: 200px;
   }
 
   .page-container {
     display: flex;
     flex-direction: row;
     height: 100%;
+    min-height: fit-content;
   }
 
   nav {
     display: flex;
     flex-direction: column;
     justify-content: left;
-    background-color: rgb(72, 72, 3);
+    background-color: var(--nav_bg_color);
     width: 200px;
     height: 100%;
-    position: fixed;
+  }
+  .menu-container {
+    position: sticky;
     top: 0;
+    z-index: 1000;
   }
 
   .menu-title {
@@ -146,24 +180,31 @@ footer {
   }
 
   main {
-    background-color: rgb(227, 226, 226);
     flex: 1;
+    justify-content: flex-start;
     padding: 25px;
-    margin-left: 200px;
+    min-height: fit-content;
+    margin-top: 0;
   }
 
   ul {
     flex-direction: column;
     justify-content: left;
   }
+  li {
+    width: auto;
+    margin: 0;
+  }
 
   .list {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    gap: 20px;
   }
 
   .card.item {
     width: 240px;
+    border: 1px solid grey;
   }
 }
