--- a/01-Layout/02-layout-lab-extra/styles.css
+++ b/01-Layout/02-layout-lab-extra/styles.css
@@ -1,8 +1,16 @@
 :root {
-  --color_background: rgb(227, 226, 226);
-  --li_footer_bg_color: rgb(241, 249, 228);
-  --title_bg_color: rgb(189, 208, 81);
-  --nav_bg_color: rgb(72, 72, 3);
+  --background: #e3e2e2;
+  --footer-bg: #f1f9e4;
+  --header-bg: #bdd051;
+  --nav-bg: #484803;
+
+  --text-light: #ffffff;
+  --text-dark: #000000;
+
+  --card-bg: #ffffff;
+  --toolbar-bg: #ffffff;
+
+  --border-color: grey;
 }
 
 * {
@@ -16,19 +24,19 @@
 body {
   display: flex;
   flex-direction: column;
-
   height: 100vh;
   min-width: 320px;
 }
+
 .page-title {
   padding: 10px;
   height: 60px;
-  color: white;
+  color: var(--text-light);
   font-size: 30px;
   align-content: center;
-
-  background-color: var(--title_bg_color);
+  background-color: var(--header-bg);
 }
+
 input,
 .toolbar > div,
 .menu-title {
@@ -39,7 +47,6 @@ ul {
   display: flex;
   justify-content: space-around;
   list-style-type: none;
-
   margin: 0;
   padding: 0;
 }
@@ -49,9 +56,9 @@ li {
   height: 40px;
   width: 80px;
   text-align: center;
-  padding: 10px; /*TODO : esta alineacion vertical con padding?*/
-  border: 1px solid;
-  background-color: var(--li_footer_bg_color);
+  padding: 10px;
+  border: 1px solid var(--border-color);
+  background-color: var(--footer-bg);
 }
 
 nav {
@@ -59,7 +66,7 @@ nav {
   top: 0;
   z-index: 1000;
   width: 100%;
-  background-color: rgb(72, 72, 3);
+  background-color: var(--nav-bg);
 }
 
 main,
@@ -71,7 +78,7 @@ main,
 }
 
 main {
-  background-color: var(--color_background);
+  background-color: var(--background);
 }
 
 .list {
@@ -85,7 +92,7 @@ main {
   padding: 15px;
   width: 90%;
   height: 160px;
-  background-color: white;
+  background-color: var(--card-bg);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -104,7 +111,7 @@ img {
 
 footer {
   height: 40px;
-  background-color: var(--li_footer_bg_color);
+  background-color: var(--footer-bg);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -132,9 +139,10 @@ footer {
   .toolbar {
     display: flex;
     justify-content: space-between;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--toolbar-bg);
     padding: 10px;
   }
+
   input,
   .toolbar > div {
     display: block;
@@ -143,7 +151,7 @@ footer {
   .page-title {
     padding: 10px;
     height: 60px;
-    color: white;
+    color: var(--text-light);
     font-size: 30px;
     align-content: center;
   }
@@ -159,10 +167,11 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: left;
-    background-color: var(--nav_bg_color);
+    background-color: var(--nav-bg);
     width: 200px;
     height: 100%;
   }
+
   .menu-container {
     position: sticky;
     top: 0;
@@ -171,7 +180,7 @@ footer {
 
   .menu-title {
     display: block;
-    color: white;
+    color: var(--text-light);
     text-align: center;
     font-size: 18px;
     font-weight: bold;
@@ -191,6 +200,7 @@ footer {
     flex-direction: column;
     justify-content: left;
   }
+
   li {
     width: auto;
     margin: 0;
@@ -205,6 +215,6 @@ footer {
 
   .card.item {
     width: 240px;
-    border: 1px solid grey;
+    border: 1px solid var(--border-color);
   }
 }
